[package]
name = "russo"
version = "0.1.0"
authors = ["wojtekw92 <wwozniak92@gmail.com>"]
edition = "2018"

[dependencies]
bcrypt = "0.6.0"
cookie = "0.12"
rocket = { version = "0.4.7", default-features = false }
serde = { version = "1.0", features = ["derive"] }

# serde_json is just for the example, not required in general
serde_json = "1.0"
jsonwebtoken = "6"

[dependencies.rocket_contrib]
version = "0.4.2"
features = ["tera_templates"]